crates/xifty-cli/tests/snapshots/cli_contract__extract_iptc_jpeg_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"iptc.jpg\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "jpeg",
    "detected_format": "jpeg",
    "path": "iptc.jpg"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "author",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "iptc",
            "offset_end": 110,
            "offset_start": 6,
            "path": "app13_iptc"
          }
        ],
        "value": {
          "kind": "string",
          "value": "Kai"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "copyright",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "iptc",
            "offset_end": 110,
            "offset_start": 6,
            "path": "app13_iptc"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "headline",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "iptc",
            "offset_end": 110,
            "offset_start": 6,
            "path": "app13_iptc"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Headline"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "description",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "iptc",
            "offset_end": 110,
            "offset_start": 6,
            "path": "app13_iptc"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Caption"
        }
      },
      {
        "confidence": 0.8999999761581421,
        "field": "keywords",
        "notes": [
          "derived from repeated Keywords metadata"
        ],
        "sources": [
          {
            "container": "jpeg",
            "namespace": "iptc",
            "offset_end": 110,
            "offset_start": 6,
            "path": "app13_iptc"
          }
        ],
        "value": {
          "kind": "string",
          "value": "xifty, metadata"
        }
      }
    ]
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
